# USD_performance_tests

./: CMakeLists.txt  README.md
cmake/: FindUSD.cmake
src/: CMakeLists.txt  main.cpp  main.py  stage.usda
